# OOP

./: .gitignore  README.md  main.py  pyproject.toml
src/: product.py  utils.py
tests/: conftest.py  test_product.py
